@@ -1,5 +1,8 @@
 Priorities for release:
 !! documentation (eg new macros)
+* `acinstall'
+* echo in installs?
+* `missing' program
 
 Further:
 - texinfo/info changes
@@ -49,10 +52,6 @@ Per> 	.java.class:
 Per> then it should be able to realize it can build .class files from
 Per> .java files, and thus be able to generate a list of
 Per> .class files from a list of .java source files.
-
-* fix this distribution to be fully standards compliant
-  * pathchk says we run over the limit
-  * must change aclocal's implementation somehow -- gross
 
 * actually use acinstall program
 
