@@ -52,7 +52,12 @@ install-info: $(INFO_DEPS)
 ## Only run this code if install-info actually exists.
 	if $(SHELL) -c 'install-info --version' >/dev/null 2>&1; then \
 	  for file in $(INFO_DEPS); do \
-	    install-info --info-dir=$(infodir) $$file; \
+## Run `:' after install-info in case install-info fails.  We really
+## don't care about failures here, because they can be spurious.  For
+## instance if you don't have a dir file, install-info will fail.  I
+## think instead it should create a new dir file for you.  This bug
+## causes the `make distcheck' target to fail reliably.
+	    install-info --info-dir=$(infodir) $$file; :;\
 	  done; \
 	else : ; fi
 
