@@ -1,5 +1,7 @@
 Sun Oct  6 00:43:01 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* texinfos.am: Run : after install-info.
+
 	* aclocal.in (parse_arguments): Better error message.
 	* automake.in (parse_arguments): Better error message.
 
